--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,8 +5,8 @@
   <h2>Page not found</h2>
 </div>
 <div class="content" align="center">
-  <p>The page you requested was not found.<br />
-  找不到頁面</p>
+  <p>The page you requested was not found </p>
+  <p><a href="/">Go back home</a></p>
 </div>
 
 
